# affinity-propagation

./: .gitignore  CMakeLists.txt  README.md
src/: affinity_propagation.cpp  affinity_propagation.h  consts.h  main.cpp  mnist_digit.h
